# 574_assignment_2

DPGEN/: DPGEN.sln
DPGEN/DPGEN/: 474a_circuit1.txt  474a_circuit1.v  DPGEN.APS  DPGEN.cpp  DPGEN.h  DPGEN.vcxproj  DPGEN.vcxproj.filters  circuit1.v  circuit2.v
DPGEN/DPGEN/Debug/: DPGEN.pch  dpgen.obj.enc  vc141.idb
DPGEN/DPGEN/Debug/DPGEN.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DPGEN.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DPGEN/DPGEN/x64/Debug/: DPGEN.pch  vc141.idb
DPGEN/DPGEN/x64/Debug/DPGEN.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DPGEN.lastbuildstate
DPGEN/Debug/: DPGEN.ilk
trevlabz_dpgen/: CMakeLists.txt  README.txt
trevlabz_dpgen/src/: CMakeLists.txt  DPGEN.cpp
